syntax = "proto3";
package sifnode.margin.v1;

import "gogoproto/gogo.proto";

option go_package = "github.com/Sifchain/sifnode/x/margin/types";

import "sifnode/margin/v1/params.proto";
import "sifnode/margin/v1/types.proto";

message GenesisState {
    Params params = 1;
    repeated MTP mtp_list = 2;
}