syntax = "proto3";
package sifnode.margin.v1;
import "gogoproto/gogo.proto";

option go_package = "github.com/Sifchain/sifnode/x/margin/types";

enum Position {
  UNSPECIFIED = 0;
  LONG = 1;
  SHORT = 2;
}

message MTP {
  string address = 1;
  string collateral_asset = 2;
  string collateral_amount = 3 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  string liabilities = 4 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  string interest_paid_collateral = 5 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  string interest_paid_custody = 6 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  string interest_unpaid_collateral = 7 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  string custody_asset = 8;
  string custody_amount = 9 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Uint",
    (gogoproto.nullable) = false
  ];
  string leverage = 10 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  string mtp_health = 11 [
    (gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec",
    (gogoproto.nullable) = false
  ];
  Position position = 12;
  uint64 id = 13;
}